add_executable(class-templates-non-type-template-args class-templates-non-type-template-args.cpp)
add_executable(function-templates-non-type-template-args function-templates-non-type-template-args.cpp)

set(CMAKE_CXX_STANDARD 17)
add_executable(auto-as-non-type-template-args auto-as-non-type-template-args.cpp)