add_executable(keyword-typename keyword-typename.cpp)
add_executable(zero-initialization zero-initialization.cpp)
add_executable(this-in-template this-in-template.cpp)
add_executable(array-in-template array-in-template.cpp)
add_executable(member-template member-template.cpp)
add_executable(template-template-parameter template-template-parameter.cpp)

set(CMAKE_CXX_STANDARD 17)
add_executable(variable-template variable-template.cpp)